Adding documentation with swag, on authenticate endpoint
