# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /
 definitions:
+  dto.AuthenticationUserInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  dto.AuthenticationUserOutput:
+    properties:
+      access_token:
+        type: string
+    type: object
   dto.CreateUserInput:
     properties:
       email:
@@ -45,13 +57,55 @@ paths:
       responses:
         "201":
           description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.Error'
       summary: Create User
       tags:
-      - users
+      - Users
+  /users/authenticate:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate User
+      parameters:
+      - description: user request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AuthenticationUserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.AuthenticationUserOutput'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Error'
+      summary: Authenticate User
+      tags:
+      - Users
 securityDefinitions:
   ApiKeyAuth:
     in: header
